// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate payment tests order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0.25,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6649981110691348,
    "tip": 1.7602499999999999,
    "total": 14.410248111069134,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.835001888930865,
    "tip": 2.21025,
    "total": 18.030251888930863,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6649981110691348,
    "tip": 1.7602499999999999,
    "total": 14.410248111069134,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.835001888930865,
    "tip": 2.21025,
    "total": 18.030251888930863,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0.2,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.5193186911698789,
    "tip": 1.7379,
    "total": 14.043218691169878,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6537875392200806,
    "tip": 2.1879,
    "total": 17.62768753922008,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.5193186911698789,
    "tip": 1.7379,
    "total": 14.043218691169878,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6537875392200806,
    "tip": 2.1879,
    "total": 17.62768753922008,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6537875392200806,
    "tip": 2.1879,
    "total": 17.62768753922008,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests order with large fries 1`] = `
Array [
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6868932038834952,
    "tip": 1.698,
    "total": 14.03822653721683,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8689320388349514,
    "tip": 2.148,
    "total": 17.670265372168284,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4441747572815534,
    "tip": 1.098,
    "total": 9.195508090614888,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests single order no fries 1`] = `
Array [
  Object {
    "delivery": 1,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.4985,
    "total": 14.4885,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests single order with fries 1`] = `
Array [
  Object {
    "delivery": 1,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 3,
    "tip": 1.947,
    "total": 18.927,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests varying orders 1`] = `
Array [
  Object {
    "delivery": 0.25,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 1.3512173128944993,
    "tip": 2.24775,
    "total": 18.833967312894497,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.5852119026149685,
    "tip": 0.9735,
    "total": 8.298711902614968,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 1.3065825067628496,
    "tip": 2.1734999999999998,
    "total": 18.22008250676285,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.995,
    "name": undefined,
    "price": 17.49,
    "tax": 1.7569882777276824,
    "tip": 2.9227499999999997,
    "total": 24.414738277727682,
    "user_id": undefined,
  },
]
`;
